--- a/src/sections/NavBar/NavBar.scss
+++ b/src/sections/NavBar/NavBar.scss
@@ -2,15 +2,13 @@
 .nav {
   &-container {
     width: 100%;
-    background-color: $nav-bar-color;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 7vh;
+    height: 74px;
     position: fixed;
     top: 0;
     z-index: 2;
-    transition: top 0.4s;
   }
 
   &-content {
@@ -32,7 +30,6 @@
   &-link {
     text-decoration: none;
     padding: 20px;
-    color: $text-dark;
     font-weight: 500;
     &:hover {
       opacity: 0.5;
